--- a/index.html
+++ b/index.html
@@ -3,18 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Discord Struttura</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- header -->
     <header>
-
+        <div class="container">
+            <div class="left-col">
+                <div class="bg-gold">
+                    <div class="box-border">logo</div>
+                </div>
+            </div>
+            <div class="central-col">
+                <div class="bg-gold">
+                    <div class="box-border">link link link link</div>
+                </div>
+            </div>
+            <div class="right-col">
+                <div class="bg-gold">
+                    <div class="box-border">login</div>
+                </div>
+            </div>
+        </div>
     </header>
+
+    <!-- corpo principale -->
     <main>
 
     </main>
+
+    <!-- footer -->
     <footer>
-        
+
     </footer>
 </body>
 </html>
