[UPD] Add first main box and fix header size

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 
     <!-- corpo principale -->
     <main>
-
+        <div class="bg-blue">
+            <div class="container2">
+                <div class="bg-pink">
+                    <div class="box-border"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
