[UPD] Add different background colors

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 
     <!-- corpo principale -->
     <main>
-        <div class="bg-blue">
+        <div class="bg-darkblue">
             <div class="container2">
-                <div class="bg-pink">
+                <div class="bg-darkpink">
                     <div class="box-border"></div>
                 </div>
             </div>
         </div>
+        <div></div>
     </main>
 
     <!-- footer -->
