--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
                 </div>
             </div>
         </div>
-        <div></div>
+        <div class="bg-white">
+            <div class="container">
+                <div class="bg-blue">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-pink">
+                    <div class="box-border"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
