--- a/index.html
+++ b/index.html
@@ -47,6 +47,26 @@
                 </div>
             </div>
         </div>
+        <div class="bg-grey ">
+            <div class="container mirror-box">
+                <div class="bg-blue">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-pink">
+                    <div class="box-border"></div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-white">
+            <div class="container">
+                <div class="bg-blue">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-pink">
+                    <div class="box-border"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
