[UPD] Add fifth and sixth main box and fix bg height

--- a/index.html
+++ b/index.html
@@ -67,6 +67,32 @@
                 </div>
             </div>
         </div>
+        <div class="bg-grey">
+            <div class="container">
+                <div class="bg-green">
+                    <div class="box-border"></div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-darkgrey">
+            <div class="container">
+                <div class="bg-salmon">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-acquamarina">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-acquamarina">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-acquamarina">
+                    <div class="box-border"></div>
+                </div>
+                <div class="bg-acquamarina">
+                    <div class="box-border"></div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- footer -->
