[UPD] Start adding footer and partially fixed header

--- a/index.html
+++ b/index.html
@@ -10,34 +10,28 @@
     <!-- header -->
     <header>
         <div class="container">
-            <div class="left-col">
-                <div class="bg-gold">
-                    <div class="box-border">logo</div>
-                </div>
+            <div class="left-col bg-gold box-border">
+                <div>logo</div>
             </div>
-            <div class="central-col">
-                <div class="bg-gold">
-                    <div class="box-border">link link link link</div>
-                </div>
+            <div class="central-col bg-gold box-border">
+                <div><a href="">link link link link</a></div>
             </div>
-            <div class="right-col">
-                <div class="bg-gold">
-                    <div class="box-border">login</div>
-                </div>
+            <div class="right-col bg-gold box-border">
+                <div><a href="">login</a></div>
             </div>
         </div>
     </header>
 
     <!-- corpo principale -->
     <main>
-        <div class="bg-darkblue">
+        <div class="bg-darkblue width-full">
             <div class="container2">
-                <div class="bg-darkpink">
+                <div class="bg-darkpink width-full">
                     <div class="box-border"></div>
                 </div>
             </div>
         </div>
-        <div class="bg-white">
+        <div class="bg-white width-full">
             <div class="container">
                 <div class="bg-blue">
                     <div class="box-border"></div>
@@ -47,8 +41,8 @@
                 </div>
             </div>
         </div>
-        <div class="bg-grey ">
-            <div class="container mirror-box">
+        <div class="bg-grey width-full">
+            <div class="container row-reverse">
                 <div class="bg-blue">
                     <div class="box-border"></div>
                 </div>
@@ -57,7 +51,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-white">
+        <div class="bg-white width-full">
             <div class="container">
                 <div class="bg-blue">
                     <div class="box-border"></div>
@@ -67,14 +61,14 @@
                 </div>
             </div>
         </div>
-        <div class="bg-grey">
+        <div class="bg-grey width-full">
             <div class="container">
-                <div class="bg-green">
+                <div class="bg-green width-full">
                     <div class="box-border"></div>
                 </div>
             </div>
         </div>
-        <div class="bg-darkgrey">
+        <div class="bg-darkgrey width-full">
             <div class="container">
                 <div class="bg-salmon">
                     <div class="box-border"></div>
@@ -94,10 +88,13 @@
             </div>
         </div>
     </main>
+    <hr>
 
     <!-- footer -->
     <footer>
-
+        <div class="bg-darkgrey">
+            <div class="container3 bg-lightgreen space-between"></div>
+        </div>
     </footer>
 </body>
 </html>
