[UPD] Add container3 class and modify padding

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="bg-white width-full">
-            <div class="container">
+            <div class="container3">
                 <div class="bg-blue">
                     <div class="box-border"></div>
                 </div>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="bg-grey width-full">
-            <div class="container row-reverse">
+            <div class="container3 row-reverse">
                 <div class="bg-blue">
                     <div class="box-border"></div>
                 </div>
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="bg-white width-full">
-            <div class="container">
+            <div class="container3">
                 <div class="bg-blue">
                     <div class="box-border"></div>
                 </div>
@@ -62,14 +62,14 @@
             </div>
         </div>
         <div class="bg-grey width-full">
-            <div class="container">
+            <div class="container3">
                 <div class="bg-green width-full">
                     <div class="box-border"></div>
                 </div>
             </div>
         </div>
         <div class="bg-darkgrey width-full">
-            <div class="container">
+            <div class="container3">
                 <div class="bg-salmon">
                     <div class="box-border"></div>
                 </div>
@@ -93,7 +93,7 @@
     <!-- footer -->
     <footer>
         <div class="bg-darkgrey">
-            <div class="container3 bg-lightgreen space-between"></div>
+            <div class="bg-lightgreen space-between"></div>
         </div>
     </footer>
 </body>
