[UPD] Created footer content and fix padding - Esercizio Terminato

--- a/index.html
+++ b/index.html
@@ -91,9 +91,16 @@
     <hr>
 
     <!-- footer -->
-    <footer>
-        <div class="bg-darkgrey">
-            <div class="bg-lightgreen space-between"></div>
+    <footer class="bg-darkgrey">
+        <div class="container">
+            <div class="content bg-lightgreen space-between">
+                <div class="left-button bg-footer-pink box-border">
+                    <div>Logo</div>
+                </div>
+                <div class="right-button bg-footer-pink box-border">
+                    <div>Bottone</div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
